<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.siraj.firstapplication.Activities.MainActivity"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:scaleType = "fitXY">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:id="@+id/second">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:text="@string/company"
            android:gravity="center"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:fontFamily="cursive"
            android:textAllCaps="false"
            android:textStyle="normal|bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/white"
                app:srcCompat="@drawable/ic_username_image"
                android:layout_gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/username_hint"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:id="@+id/username" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_lock_lock"
                android:tint="@color/white"
                android:scaleType="center"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/password_hint"
                android:textColorHint="@color/white"
                android:id="@+id/password"
                android:textColor="@color/white"/>
        </LinearLayout>
        <Button
            android:text="@string/login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:layout_gravity="center"
            android:background="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/facebook"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/googleplus"
                android:text="@string/googleplus"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
